--- a/docker/redis-on-docker/docker-compose.yml
+++ b/docker/redis-on-docker/docker-compose.yml
@@ -1,8 +1,6 @@
 services:
     redis:
-        image: redis:latest
-        ports:
+        image: "redis:alpine"
+        ports: 
             - 6379:6379
-        volumes:
-            - ./config/redis.conf:/redis.conf
-        command: [ "redis-server", "/redis.conf" ]
+ 
