--- a/Projects/Python Microservices Web App (with React, Django, Flask)/admin/docker-compose.yml
+++ b/Projects/Python Microservices Web App (with React, Django, Flask)/admin/docker-compose.yml
@@ -1,11 +1,18 @@
-version: "3.9"
+version: "3.8"
 services:
   backend:
     build: .
+    command: "python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
     volumes:
       - .:/app
+    depends_on:
+      - db
+  
+  queue:
+    build: .
+    command: "python consumer.py"
     depends_on:
       - db
 
